test fix hover on ios

--- a/public/resources/css/index.css
+++ b/public/resources/css/index.css
@@ -60,7 +60,7 @@ body {
 	opacity: 1;
 }
 
-.desc:focus{
+.desc:active{
 	opacity: 1;
 }
 
